--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "ember-start",
-	"version": "0.1.0",
+	"version": "0.1.0",		
+	"dependencies": {
+
+	},
 	"devDependencies": {
 		"grunt": "~0.4.0",
 		"grunt-contrib-jshint": "~0.2.0",
