--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
 		"grunt-contrib-clean": "~0.4.0",
 		"grunt-contrib-copy": "~0.4.0",
 		"grunt-contrib-yuidoc": "~0.4.0",
-		"grunt-ember-templates": "0.4.9"
+		"grunt-ember-templates": "~0.4.9"
 	}
 }
